# SmallCar

./: .gitignore  BlueToothDevice.cpp  BlueToothDevice.h  CMakeLists.txt  CMakeSettings.json  Concept.md  CppProperties.json  README.md  XboxController.cpp  XboxController.h  device.cpp  device.h  main.cpp
linux/: SmallCar.sln
linux/SmallCar/: SmallCar.vcxproj  SmallCar.vcxproj.filters  SmallCarGPIO.cpp  main.cpp
linux/SmallCar/res/: index.html
other/: device.h
vs2017/: RPI_Console.sln
vs2017/RPI_Console/: RPI_Console.vcxproj  SmallCarGPIO.cpp  SmallCarGPIO.h  SmallCarServer.cpp  SmallCarServer.h  main.cpp  main_cpprest.cpp
vs2017/SmallCar/: SmallCar.vcxproj  SmallCarGPIO.h  SmallCarServer.cpp  index.html  main.cpp
